// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Modifiers Modifiers MockStates Highlight outline renders as active 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #19A9E2;
  color: #fff;
  background-color: transparent;
  border: 1px solid #19A9E2;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #1798CB;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #1590C0;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #19A9E2;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #1798CB;
  border: 1px solid #1798CB;
}

<button
  className="is-active emotion-0"
>
  Active Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Highlight outline renders with hover 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #19A9E2;
  color: #fff;
  background-color: transparent;
  border: 1px solid #19A9E2;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #1798CB;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #1590C0;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #19A9E2;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #1798CB;
  border: 1px solid #1798CB;
}

<button
  className="is-hover emotion-0"
>
  Hover Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Highlight renders as active 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #19A9E2;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #1798CB;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #1590C0;
}

<button
  className="is-active emotion-0"
>
  Active Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Highlight renders with hover 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #19A9E2;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #1798CB;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #1590C0;
}

<button
  className="is-hover emotion-0"
>
  Hover Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Primary outline renders as active 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
  color: #fff;
  background-color: transparent;
  border: 1px solid #0cd664;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0cd664;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0BC15A;
  border: 1px solid #0BC15A;
}

<button
  className="is-active emotion-0"
>
  Active Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Primary outline renders with hover 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
  color: #fff;
  background-color: transparent;
  border: 1px solid #0cd664;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0cd664;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0BC15A;
  border: 1px solid #0BC15A;
}

<button
  className="is-hover emotion-0"
>
  Hover Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Primary renders as active 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

<button
  className="is-active emotion-0"
>
  Active Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Primary renders with hover 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

<button
  className="is-hover emotion-0"
>
  Hover Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Secondary renders as active 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #1A212A;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #010812;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #010812;
}

<button
  className="is-active emotion-0"
>
  Active Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Secondary renders as active 2`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #1A212A;
  color: #fff;
  background-color: transparent;
  border: 1px solid #1A212A;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #010812;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #010812;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #1A212A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #798892;
  border: 1px solid #798892;
}

<button
  className="is-active emotion-0"
>
  Active Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Secondary renders with hover 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #1A212A;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #010812;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #010812;
}

<button
  className="is-hover emotion-0"
>
  Hover Primary Button
</button>
`;

exports[`Button Modifiers Modifiers MockStates Secondary renders with hover 2`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #1A212A;
  color: #fff;
  background-color: transparent;
  border: 1px solid #1A212A;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #010812;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #010812;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #1A212A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #798892;
  border: 1px solid #798892;
}

<button
  className="is-hover emotion-0"
>
  Hover Primary Button
</button>
`;

exports[`Button Modifiers renders as highlight 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #19A9E2;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #1798CB;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #1590C0;
}

<button
  className="emotion-0"
>
  Secondary Button
</button>
`;

exports[`Button Modifiers renders as optional 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #1A212A;
  background-color: #010812;
  border: none;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #000;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #000;
}

<button
  className="emotion-0"
>
  Optional Button
</button>
`;

exports[`Button Modifiers renders as primary 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

<button
  className="emotion-0"
>
  Primary Button
</button>
`;

exports[`Button Modifiers renders as secondary 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #1A212A;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #010812;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #010812;
}

<button
  className="emotion-0"
>
  Optional Button
</button>
`;

exports[`Button Modifiers renders outline as highlight 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #19A9E2;
  color: #fff;
  background-color: transparent;
  border: 1px solid #19A9E2;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #1798CB;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #1590C0;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #19A9E2;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #1798CB;
  border: 1px solid #1798CB;
}

<button
  className="emotion-0"
>
  Secondary Button
</button>
`;

exports[`Button Modifiers renders outline as primary 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
  color: #fff;
  background-color: transparent;
  border: 1px solid #0cd664;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0cd664;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0BC15A;
  border: 1px solid #0BC15A;
}

<button
  className="emotion-0"
>
  Primary Button
</button>
`;

exports[`Button Modifiers renders outline as secondary 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #1A212A;
  color: #fff;
  background-color: transparent;
  border: 1px solid #1A212A;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #010812;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #010812;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #1A212A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #798892;
  border: 1px solid #798892;
}

<button
  className="emotion-0"
>
  Optional Button
</button>
`;

exports[`Button renders as an anchor tag 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

<a
  className="emotion-0"
  href="#some-anchor"
>
  Primary Button (Anchor)
</a>
`;

exports[`Button renders as disabled 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

<button
  className="emotion-0"
  disabled={true}
>
  Disabled Primary Button
</button>
`;

exports[`Button renders as fullWidth 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
  width: 100%;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

<button
  className="emotion-0"
>
  Full Width Primary Button
</button>
`;

exports[`Button renders correctly 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

<button
  className="emotion-0"
>
  Primary Button
</button>
`;

exports[`Button renders rounded 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
  text-transform: uppercase;
  border-radius: 6.25rem;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

<button
  className="emotion-0"
>
  Round Primary Button
</button>
`;

exports[`Button renders uppercased 1`] = `
.emotion-0 {
  padding: 0.5rem 1.5rem;
  display: inline-block;
  vertical-align: middle;
  font-family: inherit;
  font-size: 14px;
  font-weight: 600;
  line-height: 1.125rem;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  cursor: pointer;
  border-style: solid;
  border-width: 1px;
  border-color: transparent;
  border-radius: 4px;
  color: #fff;
  background-color: #0cd664;
  text-transform: uppercase;
}

.emotion-0:disabled,
.emotion-0[disabled] {
  cursor: not-allowed;
  opacity: 0.35;
}

.emotion-0.is-hover:not([disabled]),
.emotion-0:hover:not([disabled]) {
  background-color: #0BC15A;
}

.emotion-0.is-active,
.emotion-0.has-focus,
.emotion-0:active,
.emotion-0:focus {
  background-color: #0AAB50;
}

<button
  className="emotion-0"
>
  Uppercase Primary Button
</button>
`;
